# AI-CRM-and-customer-support-agent

./: .env.example  .gitignore  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements.txt  salon_info.txt
backend/app/: config.py  database.py  main.py
backend/app/middleware/: conversation.py
backend/app/models/: knowledge.py  salon.py
backend/app/routers/: admin.py  whatsapp.py
backend/app/services/: agent.py  calendar.py  knowledge.py  tools.py  whatsapp_client.py
backend/app/tasks/: worker.py
